feat: add session for handle user login /admin

--- a/app/views/admin/participants.html
+++ b/app/views/admin/participants.html
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse" id="navbarAreco">
                     <ul class="navbar-nav ml-auto navbar-areco">
                         <li class="nav-item">
-                            <a class="nav-link" href="/">Salir</a>
+                            <a class="nav-link" href="/logout">Salir</a>
                         </li>
                     </ul>
                 </div>
