--- a/app/views/admin/login.html
+++ b/app/views/admin/login.html
@@ -39,7 +39,7 @@
         </header>
         <!-- Main -->
         <main class="container">
-            <form method="post" action="/admin">
+            <form method="post" action="/login">
                 <div class="form-group">
                     <label for="email">Email</label>
                     <input type="email" class="form-control" id="email" name="email" placeholder="Ingrese su email">
